# fyusenet

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.devcontainer/: Dockerfile  (+1 more)
doxygen/: CMakeLists.txt  stylesheet.css
doxygen/appendices/: attmul_batch_appendix.inc  attmul_single_appendix.inc  dp_batch_appendix.inc  dp_single_appendix.inc  msm_batch_appendix.inc  msm_single_appendix.inc  seq_matmul_appendix.inc
fyusenet/: CMakeLists.txt  README.md  fyusenet.h
fyusenet/base/: CMakeLists.txt  asynclayerinterface.h  batchnorminterface.h  buffermanager.cpp  buffermanager.h  buffershape.cpp  buffershape.h  bufferspec.h  compiledlayers.h  convlayerinterface.h  engine.cpp  engine.h  layerbase.cpp  layerbase.h  layerbuilder.h  layerfactory.cpp  layerfactory.h  layerfactoryinterface.h  layerflags.h  modifierinterfaces.h  neuralnetwork.cpp  neuralnetwork.h  parameterprovider.cpp  parameterprovider.h  statetoken.h
fyusenet/common/: CMakeLists.txt  fynexception.cpp  fynexception.h  logging.h  miscdefs.h  performance.cpp  performance.h
fyusenet/cpu/: CMakeLists.txt  README.md  convlayer.cpp  convlayer.h  convlayerbuilder.h  cpubuffer.cpp  cpubuffer.h  cpubuffershape.cpp  cpubuffershape.h  cpulayerbase.cpp  cpulayerbase.h  cpulayerfactory.cpp  cpulayerfactory.h  cpulayerinterface.h  reducelayer.cpp  reducelayer.h  reducelayerbuilder.h
fyusenet/gl/: CMakeLists.txt  README.md  asyncpool.cpp  asyncpool.h  basic_texturepool.cpp  basic_texturepool.h  computedispatch.cpp  computedispatch.h  computeshader.h  fbo.cpp  fbo.h  fragmentshader.h  gfxcontextlink.cpp  gfxcontextmanager.cpp  gl_sys.h  glbuffer.cpp  glbuffer.h  glcontext.h  glcontextinterface.h  glexception.h  glinfo.cpp  glinfo.h  gpubuffer_gl.cpp  gpubuffer_gl.h  ibo.cpp  ibo.h  managedpbo.cpp  managedpbo.h  pbo.cpp  pbo.h  pbopool.cpp  pbopool.h  scoped_texturepool.cpp  scoped_texturepool.h  shader.cpp  shader.h  shaderbuilder.cpp  shaderbuilder.h  shadercache.cpp  shadercache.h  (+20 more)
fyusenet/gl/cgl/: glcontext_cgl.cpp
fyusenet/gl/egl/: eglhelper.cpp  eglhelper.h  glcontext_egl.cpp
fyusenet/gl/glfw/: glcontext_glfw.cpp
fyusenet/gl/glx/: glcontext_glx.cpp
fyusenet/gl/webgl/: glcontext_webgl.cpp
fyusenet/gl/wgl/: glcontext_wgl.cpp
fyusenet/gpu/: CMakeLists.txt  addsublayer.cpp  addsublayer.h  argmaxlayerbuilder.h  attentionlayerbuilder.h  avgpoollayer.cpp  avgpoollayer.h  batchnormlayer.cpp  batchnormlayer.h  blurlayer.cpp  blurlayer.h  blurlayerbuilder.h  castlayer.cpp  castlayer.h  castlayerbuilder.h  concatlayer.cpp  concatlayer.h  concatlayerbuilder.h  convlayerbase.cpp  convlayerbase.h  convlayerbuilder.h  convweightarrayKxKxNxM.cpp  convweightarrayKxKxNxM.h  convweightarray_dw_KxKxNxM.cpp  convweightarray_dw_KxKxNxM.h  customlayerbuilder.h  deep2shallow.cpp  deep2shallow.h  downloadinterface.h  downloadlayer.cpp  downloadlayer.h  embeddinglayerbuilder.h  floatconversion.cpp  floatconversion.h  functionlayer.cpp  functionlayer.h  gelulayer.cpp  gelulayer.h  gfxcontextlink.h  gfxcontextmanager.h  (+46 more)
fyusenet/gpu/custom/sequence/: linear_hadamard.cpp  linear_hadamard.h
fyusenet/gpu/deep/: deep_singleton_arithlayer.cpp  deep_singleton_arithlayer.h  deepargmaxlayer.cpp  deepargmaxlayer.h  deepavgpoollayer.cpp  deepavgpoollayer.h  deepbatchnormlayer.cpp  deepbatchnormlayer.h  deepcastlayer.cpp  deepcastlayer.h  deepconcatlayer.cpp  deepconcatlayer.h  deepconvlayer1x1.cpp  deepconvlayer1x1.h  deepconvlayerNxN.cpp  deepconvlayerNxN.h  deepconvlayerbase.cpp  deepconvlayerbase.h  deepdownloadlayer.cpp  deepdownloadlayer.h  deepdwconvlayer3x3.cpp  deepdwconvlayer3x3.h  deepdwconvlayerbase.cpp  deepdwconvlayerbase.h  deepextractimgpatches.cpp  deepextractimgpatches.h  deepfunctionlayer.cpp  deepfunctionlayer.h  deepgemmlayer.cpp  deepgemmlayer.h  deepglobalpoollayer.cpp  deepglobalpoollayer.h  deeplayerbase.cpp  deeplayerbase.h  deepmaxpoollayer.cpp  deepmaxpoollayer.h  deeppoolinglayer.cpp  deeppoolinglayer.h  deepscalelayer.cpp  deepscalelayer.h  (+14 more)
fyusenet/gpu/rudiments/: linear_texture_loader.cpp  linear_texture_loader.h  preamblegenerator.cpp  preamblegenerator.h  proxygenerator.cpp  proxygenerator.h
fyusenet/gpu/sequence/: causal_multihead_attentionlayer.cpp  causal_multihead_attentionlayer.h  embedding_sequence.cpp  embedding_sequence.h  linear_sequence.cpp  linear_sequence.h  rmsnorm_sequence.cpp  rmsnorm_sequence.h  tokenscoring_sequence.cpp  tokenscoring_sequence.h
fyusenet/gpu/sequence/rudiments/: attmul_batched.cpp  attmul_batched.h  attmul_single.cpp  attmul_single.h  dotprod_batched.cpp  dotprod_batched.h  dotprod_single.cpp  dotprod_single.h  masked_softmax_batched.cpp  masked_softmax_batched.h  masked_softmax_single.cpp  masked_softmax_single.h  matmul_const.cpp  matmul_const.h  rotary_encoding.cpp  rotary_encoding.h
fyusenet/gpu/shaders/: .gitignore  activation.inc  add.frag  avgpool.frag  batchnorm.frag  cast.frag  deep2shallow.frag  deep2shallow.vert  default.vert  funcpreamble.inc  generickernel.frag  maxpool.frag  nonmax2d.frag  oes.frag  rgb2bgr.frag  scaling.frag  shallow2deep.frag  shallow2deep.vert  sigmoid.frag  singleton_arith.frag  tanh.frag  typecast.inc
fyusenet/gpu/vanilla/: convlayer1x1_vanilla.cpp  convlayer1x1_vanilla.h  convlayerNxN_vanilla.cpp  convlayerNxN_vanilla.h  convlayer_dw_3x3_vanilla.cpp  convlayer_dw_3x3_vanilla.h  convlayerbase_vanilla.cpp  convlayerbase_vanilla.h  fractionalconvlayerNxN_vanilla.cpp  fractionalconvlayerNxN_vanilla.h  transconvlayer2x2_vanilla.cpp  transconvlayer2x2_vanilla.h  transconvlayer3x3_vanilla.cpp  transconvlayer3x3_vanilla.h  transconvlayerbase_vanilla.cpp  transconvlayerbase_vanilla.h
samples/desktop/: CMakeLists.txt  llama.cpp  resnet.cpp  stylenet.cpp
samples/web/: CMakeLists.txt  resnet.cpp  resnet.html  stylenet.cpp  stylenet.html  webcam.js
unit_tests/: CMakeLists.txt  arithtests.cpp  asynctests.cpp  convlayertests.cpp  gltesthelpers.cpp  gltesthelpers.h  layertestbase.cpp  layertestbase.h  misctests.cpp  networktests.cpp  number_render.cpp  number_render.h  pooltests.cpp
(+159 files in other folders)
